# dirwalk

./: CMakeLists.txt  README.md
src/: compare_entries.c  dirwalk.h  main.c  print_entries.c  proc_entries.c  walk_dir.c  walk_directory.c
